# rag-domain-specific

./: .env.example  .gitattributes  .gitignore  app.py  ingest.py  main.py  pipeline.py  pyproject.toml  rag_pipeline.ipynb
