[project]
name = "rag-domain-specific"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "google-generativeai>=0.8.6",
    "google-search-results>=2.4.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "serpapi>=1.0.2",
    "supabase>=2.30.0",
]
